--- a/_includes/sections/richTextSection.html
+++ b/_includes/sections/richTextSection.html
@@ -1,3 +1,11 @@
-<section class="rich-text-section">
-    {{ include.section.text | markdownify }}
+{% capture background_image %}
+    {% include hashbrown/get_media_by_id id=include.section.backgroundImage %}
+{% endcapture %}
+
+<section style="{% if include.section.padding %}padding-top: {{ include.section.padding }}rem; padding-bottom: {{ include.section.padding }}rem; {% endif %}{% if background_image %}background-image:url('{{ background_image }}');{% endif %}" class="rich-text-section {{ include.section.theme }}">
+    <div class="container">
+        {% if include.section.text %}
+            {{ include.section.text | markdownify }}
+        {% endif %}
+    </div>
 </section>
