--- a/_layouts/sectionPage.html
+++ b/_layouts/sectionPage.html
@@ -26,7 +26,7 @@ layout: compress
                 
                 <section id="downloads" class="clearfix">
                     <a href="/docs" class="button"><span>Documentation</span></a>
-                    <a href="/guide" class="button"><span>User guide</span></a>
+                    <a href="/guides" class="button"><span>Guides</span></a>
                     <a href="https://github.com/Putaitu/hashbrown-cms" id="view-on-github" class="button"><span>View on GitHub</span></a>
                 </section>
                 
