--- a/_layouts/sectionPage.html
+++ b/_layouts/sectionPage.html
@@ -7,6 +7,8 @@ layout: compress
     <head>
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
+        <meta name="google-site-verification" content="EY7Nr-E8Lg2YK4uoUljn_CCVzUrCF-cQK6zOTe0Id4w" />
+
         <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
         <link rel="stylesheet" type="text/css" href="/stylesheets/github-dark.css" media="screen">
         <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print">
