--- a/_includes/sections/banner.html
+++ b/_includes/sections/banner.html
@@ -1,5 +1,5 @@
 {% capture background_image %}
-    {% include hashbrown/get_media_by_id id=include.section.backgroundImage %}
+    {% include hashbrown/get_media_by_id id=include.section.image %}
 {% endcapture %}
 
 <section style="{% if background_image %}background-image:url('{{ background_image }}');{% endif %}" class="banner">
