--- a/_layouts/sectionPage.html
+++ b/_layouts/sectionPage.html
@@ -4,42 +4,19 @@ layout: compress
 
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset='utf-8'>
-        <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-        <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="/stylesheets/github-dark.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print">
-        <!--[if lt IE 9]>
-            <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-        <title>HashBrown CMS by Putaitu Productions</title>
-    </head>
+    {% include main/head.html %}
 
     <body>
-        <div id="container">
-            <div class="inner">
-                <header>
-                    <h1><img src="/svg/logo.svg" />HashBrown</h1>
-                    <h2>The pluggable CMS</h2>
-                </header>
-                
-                <section id="downloads" class="clearfix">
-                    <a href="/docs" class="button"><span>Documentation</span></a>
-                    <a href="/guides" class="button"><span>Guides</span></a>
-                    <a href="https://github.com/Putaitu/hashbrown-cms" id="view-on-github" class="button"><span>View on GitHub</span></a>
-                </section>
-                
-                {% for section in page.sections %}     
-                    {% include hashbrown/render_section section = section %}
-                {% endfor %}
+        {% include main/navigation.html %}
 
-                <footer>
-                    HashBrown CMS is licensed under the MIT license<br />
-                    Copyright <a href="http://putaitu.com">Putaitu Productions</a>
-                </footer>
-            </div>
+        <div class="page"> 
+            {% for section in page.sections %}     
+                {% include hashbrown/render_section section = section %}
+            {% endfor %}
         </div>
+
+        {% include main/footer.html %}
+        
+        {% include main/scripts.html %}
     </body>
 </html>
