--- a/public/css/client.css
+++ b/public/css/client.css
@@ -1,8 +1,48 @@
 @import 'https://fonts.googleapis.com/css?family=Roboto:400,700';
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+[role="button"],
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+button {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+button {
+  background: none;
+  border: 0;
+  border-radius: 0px;
+  color: inherit;
+  cursor: pointer;
+  font: inherit;
+  line-height: normal;
+  overflow: visible;
+  padding: 0;
+  -webkit-appearance: button;
+  /* for input */
+  -webkit-user-select: none;
+  /* for button */
+  -moz-user-select: none;
+  -ms-user-select: none; }
+
+input::-moz-focus-inner,
+button::-moz-focus-inner {
+  border: 0;
+  padding: 0; }
+
+[role="button"] {
+  color: inherit;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  white-space: pre;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none; }
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -16,14 +56,13 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-  padding: 0;
   margin: 0;
-  font: inherit;
+  padding: 0;
+  border: 0;
   font-size: 100%;
-  vertical-align: baseline;
-  border: 0; }
+  font: inherit;
+  vertical-align: baseline; }
 
-/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block; }
@@ -43,42 +82,116 @@ q:before, q:after {
   content: none; }
 
 table {
-  border-spacing: 0;
-  border-collapse: collapse; }
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+button, button:hover, button:focus, button:active {
+  outline: 0; }
+
+a, a:hover, a:focus, a:active {
+  color: inherit; }
+
+* {
+  box-sizing: border-box; }
+
+body {
+  font-family: 'Roboto Condensed', Helvetica, Arial, serif;
+  font-size: 1em;
+  line-height: 1.5; }
+
+p {
+  margin-bottom: 1em; }
 
 h1 {
-  font-size: 6em; }
+  font-size: 5em;
+  line-height: 1em;
+  margin-bottom: 0.5em; }
   @media (max-width: 1199px) {
     h1 {
-      font-size: 5em; } }
+      font-size: 4em; } }
   @media (max-width: 991px) {
     h1 {
-      font-size: 4em; } }
+      font-size: 3em; } }
   @media (max-width: 767px) {
     h1 {
-      font-size: 3em; } }
+      font-size: 2em; } }
 
-section.banner {
-  height: 960px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  background-position: center;
-  background-size: cover; }
-  @media (max-height: 1199px) {
-    section.banner {
-      height: 800px; } }
-  @media (max-height: 991px) {
-    section.banner {
-      height: 580px; } }
-  @media (max-height: 767px) {
-    section.banner {
-      height: 375px; } }
+h2 {
+  font-size: 3em;
+  line-height: 1em;
+  margin-bottom: 0.5em; }
+  @media (max-width: 1199px) {
+    h2 {
+      font-size: 2em; } }
+  @media (max-width: 991px) {
+    h2 {
+      font-size: 1em; } }
+  @media (max-width: 767px) {
+    h2 {
+      font-size: 0em; } }
 
-section.rich-text-section img {
-  max-width: 100%; }
+h3 {
+  font-size: 2em;
+  line-height: 1em;
+  margin-bottom: 0.5em; }
+  @media (max-width: 1199px) {
+    h3 {
+      font-size: 1em; } }
+  @media (max-width: 991px) {
+    h3 {
+      font-size: 0em; } }
+  @media (max-width: 767px) {
+    h3 {
+      font-size: -1em; } }
+
+h4 {
+  font-size: 1.5em;
+  line-height: 1em;
+  margin-bottom: 0.5em; }
+  @media (max-width: 1199px) {
+    h4 {
+      font-size: 0.5em; } }
+  @media (max-width: 991px) {
+    h4 {
+      font-size: -0.5em; } }
+  @media (max-width: 767px) {
+    h4 {
+      font-size: -1.5em; } }
+
+section {
+  margin-bottom: 4em; }
+  section.banner {
+    height: 960px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    background-position: center;
+    background-size: cover; }
+    @media (max-height: 1199px) {
+      section.banner {
+        height: 800px; } }
+    @media (max-height: 991px) {
+      section.banner {
+        height: 580px; } }
+    @media (max-height: 767px) {
+      section.banner {
+        height: 375px; } }
+    section.banner .container {
+      position: relative;
+      padding-right: 20em; }
+      @media (max-width: 1199px) {
+        section.banner .container {
+          padding-right: 20em; } }
+      @media (max-width: 991px) {
+        section.banner .container {
+          padding-right: 10em; } }
+      @media (max-width: 767px) {
+        section.banner .container {
+          padding-right: 5em; } }
+  section.rich-text-section img {
+    max-width: 100%; }
 
 /*
 a {
@@ -353,11 +466,6 @@ section img {
     display: block;
 }
 */
-body {
-  font-family: 'Roboto Condensed', Helvetica, Arial, serif;
-  font-size: 1em;
-  line-height: 1.5; }
-
 .container {
   margin-left: auto;
   margin-right: auto;
