--- a/src/client/sass/colors.scss
+++ b/src/client/sass/colors.scss
@@ -1,1 +1,19 @@
+$teal-light: #5b84a2;
+$teal-medium: #3e586b;
+$teal-dark: #21303B;
+$teal-darker: #171e23;
+
+$pink-light: #FF345F;
+$pink-medium: #E70D3B;
+
+$grey-lightest: #efefef;
+$grey-lighter: #e8e8e8;
+$grey-light: #cccccc;
+$grey-medium: #888888;
+$grey-dark: #666666;
+$grey-darker: #343434;
+$grey-darkest: #222222;
+
+$black: #000;
+
 $white: #fff;
