--- a/src/client/sass/sections.scss
+++ b/src/client/sass/sections.scss
@@ -46,4 +46,14 @@ section {
             max-width: 100%;
         }
     }
+
+    &.buttons {
+        .container {
+            text-align: center;
+
+            .btn {
+                margin: 1em;
+            }
+        }
+    }
 }
