--- a/_includes/sections/iamges.html
+++ b/_includes/sections/iamges.html
@@ -1,11 +1,11 @@
-<section class="buttons">
+<section class="images">
     <div class="container">
         {% if include.section.text %}
             {{ include.section.text | markdownify }}
         {% endif %}
 
-        {% for button in include.section.buttons %}
-            <a class="btn" href="{{ button.href }}" target="{{ button.target }}">{{ button.text }}</a>
+        {% for image_id in include.section.images %}
+            <img src="{% include hashbrown/get_media_by_id id={{ image_id }}" />
         {% endfor %}
     </div>
 </section>
