--- a/src/client/sass/typography.scss
+++ b/src/client/sass/typography.scss
@@ -10,15 +10,15 @@ body {
     margin-bottom: 0.5em;
 
     @media ($md-h) {
-        font-size: #{$size - 1}em;
+        font-size: #{$size * 0.8}em;
     }
     
     @media ($sm-h) {
-        font-size: #{$size - 2}em;
+        font-size: #{$size * 0.7}em;
     }
 
     @media ($xs-h) {
-        font-size: #{$size - 3}em;
+        font-size: #{$size * 0.6}em;
     }
 }
 
