--- a/_includes/sections/images.html
+++ b/_includes/sections/images.html
@@ -5,7 +5,7 @@
         {% endif %}
 
         {% for image_id in include.section.images %}
-            <img src="{% include hashbrown/get_media_by_id id={{ image_id }}" />
+            <img src="{% include hashbrown/get_media_by_id id=image_id %}" />
         {% endfor %}
     </div>
 </section>
