--- a/public/css/client.css
+++ b/public/css/client.css
@@ -162,7 +162,7 @@ h4 {
   background-color: #E70D3B;
   color: #fff;
   height: 50px;
-  width: 200px;
+  width: 230px;
   line-height: 50px;
   border-radius: 25px;
   display: inline-block;
@@ -177,8 +177,19 @@ h4 {
     border-color: #E70D3B; }
 
 section {
-  margin-bottom: 4em; }
+  padding: 7em 0em;
+  position: relative; }
+  section:after {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-image: radial-gradient(circle, rgba(0, 0, 0, 0.1), transparent); }
   section.banner {
+    padding: 0em;
     height: 960px;
     display: flex;
     flex-direction: column;
@@ -208,12 +219,20 @@ section {
       @media (max-width: 767px) {
         section.banner .container {
           padding-right: 5em; } }
-  section.rich-text-section img {
+  section.rich-text-section .container img {
     max-width: 100%; }
   section.buttons .container {
     text-align: center; }
     section.buttons .container .btn {
       margin: 1em; }
+  section.images .container {
+    text-align: center; }
+    section.images .container img {
+      margin: 0em 1em;
+      line-height: 1em;
+      height: 3em; }
+  section .container {
+    position: relative; }
 
 /*
 a {
