--- a/src/client/sass/sections.scss
+++ b/src/client/sass/sections.scss
@@ -1,7 +1,20 @@
 section {
-    margin-bottom: 4em;
+    padding: 7em 0em;
+    position: relative;
+   
+    &:after {
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        content: '';
+        display: block;
+        width: 100%;
+        height: 1px;
+        background-image: radial-gradient(circle, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
+    }
 
     &.banner {
+        padding: 0em;
         height: 960px;
         display: flex;
         flex-direction: column;
@@ -42,8 +55,10 @@ section {
     }
 
     &.rich-text-section {
-        img {
-            max-width: 100%;
+        .container {
+            img {
+                max-width: 100%;
+            }
         }
     }
 
@@ -55,5 +70,21 @@ section {
                 margin: 1em;
             }
         }
+    }
+    
+    &.images {
+        .container {
+            text-align: center;
+
+            img {
+                margin: 0em 1em;
+                line-height: 1em;
+                height: 3em;
+            }
+        }
+    }
+
+    .container {
+        position: relative;
     }
 }
