--- a/src/client/sass/client.scss
+++ b/src/client/sass/client.scss
@@ -1,3 +1,4 @@
+@import 'sass-material-colors';
 @import 'https://fonts.googleapis.com/css?family=Roboto:400,700';
 @import './reset';
 @import './breakpoints';
