--- a/public/css/client.css
+++ b/public/css/client.css
@@ -219,7 +219,6 @@ section {
       section.banner {
         height: 375px; } }
     section.banner .container {
-      margin-top: -10em;
       position: relative;
       padding-right: 30em; }
       @media (max-width: 1199px) {
@@ -230,8 +229,18 @@ section {
           padding-right: 20em; } }
       @media (max-width: 767px) {
         section.banner .container {
-          margin-top: -5em;
           padding-right: 5em; } }
+      section.banner .container p:first-of-type {
+        margin-top: 2em; }
+        @media (max-width: 1199px) {
+          section.banner .container p:first-of-type {
+            margin-top: 4em; } }
+        @media (max-width: 991px) {
+          section.banner .container p:first-of-type {
+            margin-top: 8em; } }
+        @media (max-width: 767px) {
+          section.banner .container p:first-of-type {
+            margin-top: 5em; } }
   section.rich-text-section .container {
     max-width: 600px; }
     section.rich-text-section .container img {
