--- a/public/css/client.css
+++ b/public/css/client.css
@@ -130,7 +130,9 @@ h1 {
 h2 {
   font-size: 3em;
   line-height: 1em;
-  margin-bottom: 0.5em; }
+  margin-bottom: 0.5em;
+  color: #d81b60;
+  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3); }
   @media (max-width: 1199px) {
     h2 {
       font-size: 2.4em; } }
@@ -181,8 +183,14 @@ h4 {
   font-weight: 700;
   text-align: center;
   text-decoration: none;
-  border: 2px solid transparent; }
-  .btn:hover {
+  border: 2px solid transparent;
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+  position: relative; }
+  .btn:active {
+    top: 1px;
+    box-shadow: none; }
+  .btn:hover, .btn:focus {
+    outline: 0px;
     color: #fff;
     background-color: #f06292;
     border-color: #d81b60; }
@@ -190,34 +198,43 @@ h4 {
 section {
   padding: 7em 0em;
   position: relative; }
-  section:after {
+  section:after, section:before {
     position: absolute;
-    bottom: 0px;
     left: 0px;
     content: '';
     display: block;
     width: 100%;
-    height: 1px;
-    background-image: radial-gradient(circle, rgba(0, 0, 0, 0.1), transparent); }
+    height: 1px; }
+  section:after {
+    bottom: 0px;
+    background-image: radial-gradient(circle, rgba(120, 120, 120, 0.2), rgba(120, 120, 120, 0)); }
+  section:before {
+    bottom: -1px;
+    background-image: radial-gradient(circle, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0)); }
   section.banner {
     padding: 0em;
-    height: 960px;
+    height: 600px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: #fff;
-    background-position: 60% 50%;
-    background-size: cover; }
-    @media (max-height: 1199px) {
+    background-position: 50% 0%;
+    background-size: auto 600px;
+    background-attachment: fixed;
+    box-shadow: 0px 5px 10px 0px rgba(120, 120, 120, 0.2); }
+    @media (max-height: 800px) {
       section.banner {
-        height: 800px; } }
-    @media (max-height: 991px) {
+        height: 500px;
+        background-size: auto 500px; } }
+    @media (max-height: 600px) {
       section.banner {
-        height: 580px; } }
-    @media (max-height: 767px) {
+        height: 400px;
+        background-size: auto 400px; } }
+    @media (max-height: 500px) {
       section.banner {
-        height: 375px; } }
+        height: 300px;
+        background-size: auto 300px; } }
     section.banner .container {
       position: relative;
       padding-right: 30em; }
@@ -257,6 +274,9 @@ section {
       height: 3em; }
   section .container {
     position: relative; }
+
+body {
+  background-image: linear-gradient(90deg, #e0e0e0, #f5f5f5 50%, #e0e0e0); }
 
 .container {
   margin-left: auto;
