--- a/src/client/sass/typography.scss
+++ b/src/client/sass/typography.scss
@@ -1,3 +1,5 @@
+@import 'https://fonts.googleapis.com/css?family=Roboto:400,700';
+
 body {
     font-family: 'Roboto Condensed', Helvetica, Arial, serif;
     font-size: 1em;
@@ -33,6 +35,8 @@ h1 {
 
 h2 {
     @include set-heading-size(3);
+    color: material-color('pink', '600');
+    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
 }
 
 h3 {
