--- a/_includes/main/navigation.html
+++ b/_includes/main/navigation.html
@@ -1,2 +1,15 @@
-<nav class="navbar-main">
+<nav>
+    <div class="container">
+        <ul>
+            <li>
+                <a href="/" class="logo"></a>
+            </li>
+            <li>
+                <a href="/guides">Guides</a>
+            </li>
+            <li>
+                <a href="/guides">Features</a>
+            </li>
+        </ul>
+    </div>
 </nav>
