--- a/public/css/client.css
+++ b/public/css/client.css
@@ -275,6 +275,35 @@ section {
   section .container {
     position: relative; }
 
+nav {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  z-index: 50;
+  padding: 10px 0px; }
+  nav.darken ul li a, nav.darken ul li a:hover {
+    color: #616161; }
+  nav.darken ul li a.logo {
+    background-image: url("/public/svg/logo-grey.svg"); }
+  nav ul {
+    float: right; }
+    nav ul li {
+      display: block;
+      padding: 0px 10px;
+      float: left; }
+      nav ul li a {
+        display: block;
+        height: 32px;
+        line-height: 32px;
+        text-decoration: none; }
+        nav ul li a, nav ul li a:hover {
+          color: #fff; }
+        nav ul li a.logo {
+          background-image: url("/public/svg/logo-white.svg");
+          background-size: 100% 100%;
+          width: 32px; }
+
 body {
   background-image: linear-gradient(90deg, #e0e0e0, #f5f5f5 50%, #e0e0e0); }
 
