--- a/src/client/sass/client.scss
+++ b/src/client/sass/client.scss
@@ -5,6 +5,7 @@
 @import './typography';
 @import './widgets';
 @import './sections';
+@import './navigation';
 
 body {
     background-image: linear-gradient(90deg, material-color('grey', '300'), material-color('grey', '100') 50%, material-color('grey', '300'));
