--- a/_includes/main/navigation.html
+++ b/_includes/main/navigation.html
@@ -1,14 +1,16 @@
 <nav>
     <div class="container">
-        <ul>
+        <ul class="navbar-left">
             <li>
                 <a href="/" class="logo"></a>
             </li>
+        </ul>
+        <ul class="navbar-right">
             <li>
                 <a href="/guides">Guides</a>
             </li>
             <li>
-                <a href="/guides">Features</a>
+                <a href="/features">Features</a>
             </li>
         </ul>
     </div>
