--- a/src/client/sass/typography.scss
+++ b/src/client/sass/typography.scss
@@ -35,8 +35,7 @@ h1 {
 
 h2 {
     @include set-heading-size(3);
-    color: material-color('pink', '600');
-    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+    text-shadow: 1px 1px 0px #fff, 0px 0px 8px material-color('grey', '300');
 }
 
 h3 {
