--- a/public/css/client.css
+++ b/public/css/client.css
@@ -131,8 +131,7 @@ h2 {
   font-size: 3em;
   line-height: 1em;
   margin-bottom: 0.5em;
-  color: #d81b60;
-  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3); }
+  text-shadow: 1px 1px 0px #fff, 0px 0px 8px #e0e0e0; }
   @media (max-width: 1199px) {
     h2 {
       font-size: 2.4em; } }
@@ -221,8 +220,9 @@ section {
     color: #fff;
     background-position: 50% 0%;
     background-size: auto 600px;
-    background-attachment: fixed;
-    box-shadow: 0px 5px 10px 0px rgba(120, 120, 120, 0.2); }
+    background-attachment: fixed; }
+    section.banner.light {
+      color: #424242; }
     @media (max-height: 800px) {
       section.banner {
         height: 500px;
@@ -286,23 +286,25 @@ nav {
     color: #616161; }
   nav.darken ul li a.logo {
     background-image: url("/public/svg/logo-grey.svg"); }
-  nav ul {
+  nav ul.navbar-right {
     float: right; }
-    nav ul li {
+    nav ul.navbar-right li {
+      padding-left: 10px; }
+  nav ul li {
+    display: block;
+    float: left;
+    padding-right: 10px; }
+    nav ul li a {
       display: block;
-      padding: 0px 10px;
-      float: left; }
-      nav ul li a {
-        display: block;
-        height: 32px;
-        line-height: 32px;
-        text-decoration: none; }
-        nav ul li a, nav ul li a:hover {
-          color: #fff; }
-        nav ul li a.logo {
-          background-image: url("/public/svg/logo-white.svg");
-          background-size: 100% 100%;
-          width: 32px; }
+      height: 32px;
+      line-height: 32px;
+      text-decoration: none; }
+      nav ul li a, nav ul li a:hover {
+        color: #fff; }
+      nav ul li a.logo {
+        background-image: url("/public/svg/logo-white.svg");
+        background-size: 100% 100%;
+        width: 32px; }
 
 body {
   background-image: linear-gradient(90deg, #e0e0e0, #f5f5f5 50%, #e0e0e0); }
