--- a/src/client/sass/sections.scss
+++ b/src/client/sass/sections.scss
@@ -32,7 +32,10 @@ section {
         background-position: 50% 0%;
         background-size: auto 600px;
         background-attachment: fixed;
-        box-shadow: 0px 5px 10px 0px rgba(120, 120, 120, 0.2);
+
+        &.light {
+            color: material-color('grey', '800');
+        }
 
         @media($md-v) {
             height: 500px;
