--- a/_includes/main/navigation.html
+++ b/_includes/main/navigation.html
@@ -7,6 +7,9 @@
         </ul>
         <ul class="navbar-right">
             <li>
+                <a href="/getting-started">Getting started</a>
+            </li>
+            <li>
                 <a href="/guides">Guides</a>
             </li>
             <li>
