--- a/public/css/client.css
+++ b/public/css/client.css
@@ -170,6 +170,14 @@ h4 {
     h4 {
       font-size: 0.9em; } }
 
+pre {
+  padding: 1em;
+  font-family: monospace;
+  background-color: #424242;
+  color: #f5f5f5;
+  border-radius: 5px;
+  font-size: 11px; }
+
 .btn {
   background-color: #d81b60;
   color: #fff;
@@ -236,36 +244,21 @@ section {
         height: 300px;
         background-size: auto 300px; } }
     section.banner .container {
-      position: relative;
-      padding-right: 30em; }
-      @media (max-width: 1199px) {
-        section.banner .container {
-          padding-right: 30em; } }
-      @media (max-width: 991px) {
-        section.banner .container {
-          padding-right: 20em; } }
-      @media (max-width: 767px) {
-        section.banner .container {
-          padding-right: 5em; } }
-      section.banner .container p:first-of-type {
-        margin-top: 2em; }
-        @media (max-width: 1199px) {
-          section.banner .container p:first-of-type {
-            margin-top: 4em; } }
-        @media (max-width: 991px) {
-          section.banner .container p:first-of-type {
-            margin-top: 8em; } }
-        @media (max-width: 767px) {
-          section.banner .container p:first-of-type {
-            margin-top: 5em; } }
+      position: relative; }
+      section.banner .container h1, section.banner .container h2, section.banner .container p {
+        max-width: 50%; }
   section.rich-text-section .container {
     max-width: 600px; }
     section.rich-text-section .container img {
       max-width: 100%; }
   section.buttons .container {
     text-align: center; }
-    section.buttons .container .btn {
+    section.buttons .container .button-container .btn {
       margin: 1em; }
+    section.buttons .container .link-container {
+      margin-top: 1em; }
+      section.buttons .container .link-container a {
+        margin: 0em 1em; }
   section.images .container {
     text-align: center; }
     section.images .container img {
