--- a/src/client/sass/widgets.scss
+++ b/src/client/sass/widgets.scss
@@ -26,3 +26,15 @@
         border-color: material-color('pink', '600');
     }
 }
+
+pre {
+    cursor: text;
+    margin: 1em;
+    box-shadow: inset 2px 2px 10px 0px material-color('grey', '900'), 1px 1px 0px #fff;
+    padding: 1em;
+    font-family: monospace;
+    background-color: material-color('grey', '800');
+    color: material-color('grey', '100');
+    border-radius: 5px;
+    font-size: 11px;
+}
