--- a/_includes/main/navigation.html
+++ b/_includes/main/navigation.html
@@ -13,6 +13,12 @@
                 <a href="/guides">Guides</a>
             </li>
             <li>
+                <a href="/docs">Docs</a>
+            </li>
+            <li>
+                <a href="/api">API</a>
+            </li>
+            <li>
                 <a href="/features">Features</a>
             </li>
         </ul>
