--- a/public/css/client.css
+++ b/public/css/client.css
@@ -305,10 +305,10 @@ nav {
       height: 32px;
       line-height: 32px;
       text-decoration: none; }
-      nav ul li a {
+      nav ul li a, nav ul li a:hover {
         color: #fff; }
       nav ul li a:hover {
-        color: #d81b60; }
+        text-decoration: underline; }
       nav ul li a.logo {
         background-image: url("/public/svg/logo-white.svg");
         background-size: 100% 100%;
