--- a/src/client/sass/navigation.scss
+++ b/src/client/sass/navigation.scss
@@ -11,7 +11,7 @@ nav {
             & {
                 color: material-color('grey', '700');
             }
-            
+           
             &.logo {
                 background-image: url('/public/svg/logo-grey.svg');
             }
@@ -38,12 +38,12 @@ nav {
                 line-height: 32px;
                 text-decoration: none;
 
-                & {
+                &, &:hover {
                     color: #fff;
                 }
 
                 &:hover {
-                    color: material-color('pink', '600');
+                    text-decoration: underline;
                 }
 
                 &.logo {
