section image text

--- a/public/css/client.css
+++ b/public/css/client.css
@@ -209,6 +209,32 @@ pre {
   border-radius: 5px;
   font-size: 11px; }
 
+.modal-backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  top: 0px; }
+  .modal-backdrop.active {
+    opacity: 1; }
+    .modal-backdrop.active .modal {
+      top: 50%; }
+  .modal-backdrop .modal {
+    transition: top 0.5s ease;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: calc(100% - 2em);
+    max-width: 50em; }
+    .modal-backdrop .modal .modal-body {
+      text-align: center; }
+      .modal-backdrop .modal .modal-body img {
+        max-width: 100%; }
+
 section {
   padding: 7em 0em;
   position: relative; }
@@ -218,6 +244,16 @@ section {
     list-style-type: disc; }
   section ol {
     list-style-type: decimal; }
+  section img {
+    display: block;
+    border: 2px solid #424242;
+    margin: 2em auto;
+    max-width: 300px;
+    cursor: pointer;
+    transition: max-width 0.5s ease;
+    user-select: none; }
+    section img:hover {
+      border-color: #d81b60; }
   section:after, section:before {
     position: absolute;
     left: 0px;
@@ -262,8 +298,6 @@ section {
         max-width: 50%; }
   section.rich-text-section .container {
     max-width: 600px; }
-    section.rich-text-section .container img {
-      max-width: 100%; }
   section.buttons .container {
     text-align: center; }
     section.buttons .container .button-container .btn {
