--- a/src/client/sass/sections.scss
+++ b/src/client/sass/sections.scss
@@ -14,6 +14,20 @@ section {
         list-style-type: decimal;
     }
 
+    img {
+        display: block;
+        border: 2px solid material-color('grey', '800');
+        margin: 2em auto;
+        max-width: 300px;
+        cursor: pointer;
+        transition: max-width 0.5s ease;
+        user-select: none;
+
+        &:hover {
+            border-color: material-color('pink', '600');
+        }
+    }
+
     &:after, &:before {
         position: absolute;
         left: 0px;
@@ -76,10 +90,6 @@ section {
     &.rich-text-section {
         .container {
             max-width: 600px;
-
-            img {
-                max-width: 100%;
-            }
         }
     }
 
