--- a/src/client/sass/widgets.scss
+++ b/src/client/sass/widgets.scss
@@ -38,3 +38,40 @@ pre {
     border-radius: 5px;
     font-size: 11px;
 }
+
+.modal-backdrop {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    top: 0px;
+
+    &.active {
+        opacity: 1;
+        
+        .modal {
+            top: 50%;
+        }
+    }
+
+    .modal {
+        transition: top 0.5s ease;
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: calc(100% - 2em);
+        max-width: 50em;
+
+        .modal-body {
+            text-align: center;
+
+            img {
+                max-width: 100%;
+            }
+        }
+    }
+}
