--- a/src/client/sass/sections.scss
+++ b/src/client/sass/sections.scss
@@ -1,5 +1,5 @@
 section {
-    padding: 7em 0em;
+    padding: 4em 0em;
     position: relative;
 
     ul, ol {
@@ -125,6 +125,16 @@ section {
         }
     }
 
+    &.child-links {
+        .container {
+            max-width: 600px;
+            
+            a {
+                display: block;
+            }
+        }
+    }
+        
     .container {
         position: relative;
     }
