--- a/_includes/main/navigation.html
+++ b/_includes/main/navigation.html
@@ -1,11 +1,9 @@
 <nav>
     <div class="container">
-        <ul class="navbar-left">
-            <li>
-                <a href="/" class="logo"></a>
+        <ul>
+            <li class="logo">
+                <a href="/"></a>
             </li>
-        </ul>
-        <ul class="navbar-right">
             <li>
                 <a href="/getting-started">Getting started</a>
             </li>
