--- a/_includes/sections/banner.html
+++ b/_includes/sections/banner.html
@@ -1,8 +1,4 @@
-{% capture background_image %}
-    {% include hashbrown/get_media_by_id id=include.section.image %}
-{% endcapture %}
-
-<section style="{% if background_image %}background-image:url('{{ background_image }}');{% endif %}" class="banner {{ include.section.theme }}">
+<section class="banner {{ include.section.theme }}">
     <div class="container">
         {% if include.section.text %}
             {{ include.section.text | markdownify }}
