--- a/public/css/client.css
+++ b/public/css/client.css
@@ -1,14 +1,3 @@
-/**
- * Retrieves a color value from the $material-colors Sass map
- * Inspired by https://github.com/nilskaspersson/Google-Material-UI-Color-Palette/
- *
- * @function
- * @param {string} color-name             - quoted, lower-case, dasherized color
- *                                          name (e.g. 'pink', 'amber')
- * @param {string} [color-variant='500']  - quoted, lowercase color variant (e.g.
- *                                          '200', 'a100')
- */
-@import 'https://fonts.googleapis.com/css?family=Roboto:400,700';
 [role="button"],
 input[type="submit"],
 input[type="reset"],
@@ -104,20 +93,41 @@ a, a:hover, a:focus, a:active {
 * {
   box-sizing: border-box; }
 
+/* Generic */
+/* Primary */
+/* Secondary */
+/* Warning */
+/* Success */
+/* Standard */
+@font-face {
+  font-family: 'Roboto';
+  font-weight: normal;
+  src: url("/fonts/Roboto/Roboto-Regular.ttf"); }
+
+@font-face {
+  font-family: 'Roboto';
+  font-weight: bold;
+  src: url("/fonts/Roboto/Roboto-Bold.ttf"); }
+
+@font-face {
+  font-family: 'RobotoMono';
+  font-weight: normal;
+  src: url("/fonts/Roboto_Mono/RobotoMono-Regular.ttf"); }
+
 body {
-  font-family: 'Roboto Condensed', Helvetica, Arial, serif;
+  font-family: 'Roboto', Helvetica, Arial, serif;
   font-size: 1em;
   line-height: 1.5;
-  color: #424242; }
+  color: #333333; }
 
 p {
   margin-bottom: 1em; }
 
 h1 {
   font-size: 5em;
-  line-height: 1em;
-  margin-top: 0.8em;
-  margin-bottom: 0.5em; }
+  line-height: 1;
+  margin-top: 0.6em;
+  margin-bottom: 0.4em; }
   @media (max-width: 1199px) {
     h1 {
       font-size: 4em; } }
@@ -130,10 +140,10 @@ h1 {
 
 h2 {
   font-size: 3em;
-  line-height: 1em;
-  margin-top: 0.8em;
-  margin-bottom: 0.5em;
-  text-shadow: 1px 1px 0px #fff, 0px 0px 8px #e0e0e0; }
+  line-height: 1;
+  margin-top: 0.6em;
+  margin-bottom: 0.4em;
+  text-shadow: 1px 1px 0px #fff, 0px 0px 8px material-color("grey", "300"); }
   @media (max-width: 1199px) {
     h2 {
       font-size: 2.4em; } }
@@ -146,9 +156,9 @@ h2 {
 
 h3 {
   font-size: 2em;
-  line-height: 1em;
-  margin-top: 0.8em;
-  margin-bottom: 0.5em; }
+  line-height: 1;
+  margin-top: 0.6em;
+  margin-bottom: 0.4em; }
   @media (max-width: 1199px) {
     h3 {
       font-size: 1.6em; } }
@@ -161,9 +171,9 @@ h3 {
 
 h4 {
   font-size: 1.5em;
-  line-height: 1em;
-  margin-top: 0.8em;
-  margin-bottom: 0.5em; }
+  line-height: 1;
+  margin-top: 0.6em;
+  margin-bottom: 0.4em; }
   @media (max-width: 1199px) {
     h4 {
       font-size: 1.2em; } }
@@ -175,12 +185,11 @@ h4 {
       font-size: 0.9em; } }
 
 .btn {
-  background-color: #d81b60;
-  color: #fff;
+  background-color: #e70d3b;
+  color: #ffffff;
   height: 50px;
   width: 230px;
   line-height: 50px;
-  border-radius: 25px;
   display: inline-block;
   text-transform: uppercase;
   font-weight: 700;
@@ -193,21 +202,18 @@ h4 {
     top: 1px;
     box-shadow: none; }
   .btn:hover, .btn:focus {
-    outline: 0px;
-    color: #fff;
-    background-color: #f06292;
-    border-color: #d81b60; }
+    outline: 0px; }
 
 pre {
   cursor: text;
   margin: 1em;
-  box-shadow: inset 2px 2px 10px 0px #212121, 1px 1px 0px #fff;
   padding: 1em;
   font-family: monospace;
-  background-color: #424242;
-  color: #f5f5f5;
+  background-color: #21303b;
+  color: #ffffff;
   border-radius: 5px;
-  font-size: 11px; }
+  font-size: 11px;
+  overflow-x: auto; }
 
 .modal-backdrop {
   background-color: rgba(0, 0, 0, 0.5);
@@ -246,14 +252,14 @@ section {
     list-style-type: decimal; }
   section img {
     display: block;
-    border: 2px solid #424242;
+    border: 2px solid #21303b;
     margin: 2em auto;
     max-width: 300px;
     cursor: pointer;
     transition: max-width 0.5s ease;
     user-select: none; }
     section img:hover {
-      border-color: #d81b60; }
+      border-color: #e70d3b; }
   section:after, section:before {
     position: absolute;
     left: 0px;
@@ -269,33 +275,20 @@ section {
     background-image: radial-gradient(circle, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0)); }
   section.banner {
     padding: 0em;
-    height: 600px;
+    height: 300px;
+    max-height: 50vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #fff;
-    background-position: 50% 0%;
-    background-size: auto 600px;
-    background-attachment: fixed; }
-    section.banner.light {
-      color: #424242; }
-    @media (max-height: 800px) {
-      section.banner {
-        height: 500px;
-        background-size: auto 500px; } }
-    @media (max-height: 600px) {
-      section.banner {
-        height: 400px;
-        background-size: auto 400px; } }
-    @media (max-height: 500px) {
-      section.banner {
-        height: 300px;
-        background-size: auto 300px; } }
+    color: #ffffff;
+    background-color: #21303b; }
     section.banner .container {
+      border-left: 0.25rem solid #e70d3b;
+      padding-left: 1rem;
       position: relative; }
-      section.banner .container h1, section.banner .container h2, section.banner .container p {
-        max-width: 50%; }
+      section.banner .container h1 {
+        margin-top: 0px; }
   section.rich-text-section .container {
     max-width: 600px; }
   section.buttons .container {
@@ -325,40 +318,55 @@ nav {
   left: 0px;
   width: 100%;
   z-index: 50;
-  padding: 10px 0px; }
-  nav.darken ul li a {
-    color: #616161; }
-  nav.darken ul li a.logo {
-    background-image: url("/public/svg/logo-grey.svg"); }
-  nav ul.navbar-right {
-    float: right; }
-    nav ul.navbar-right li {
-      padding-left: 10px; }
-  nav ul li {
-    display: block;
-    float: left;
-    padding-right: 10px; }
-    nav ul li a {
+  padding: 10px 0px;
+  background-color: #21303b;
+  color: #ffffff; }
+  nav ul {
+    display: flex;
+    flex-wrap: wrap; }
+    nav ul li {
       display: block;
-      height: 32px;
-      line-height: 32px;
-      text-decoration: none; }
-      nav ul li a, nav ul li a:hover {
-        color: #fff; }
-      nav ul li a:hover {
-        text-decoration: underline; }
-      nav ul li a.logo {
-        background-image: url("/public/svg/logo-white.svg");
-        background-size: 100% 100%;
-        width: 32px; }
+      padding-right: 10px; }
+      @media (max-width: 767px) {
+        nav ul li {
+          padding: 0px;
+          text-align: center;
+          flex-grow: 1; } }
+      nav ul li.logo {
+        flex-grow: 1; }
+        @media (max-width: 767px) {
+          nav ul li.logo {
+            width: 100%;
+            flex-basis: 100%; } }
+        nav ul li.logo a {
+          display: block;
+          background-image: url("/public/svg/logo-pink.svg");
+          background-size: 100% 100%;
+          width: 32px; }
+          @media (max-width: 767px) {
+            nav ul li.logo a {
+              margin: 0px auto; } }
+      nav ul li a {
+        height: 32px;
+        line-height: 32px;
+        text-decoration: none;
+        color: #ffffff; }
+        nav ul li a:hover {
+          color: #e70d3b; }
+        nav ul li a:hover {
+          text-decoration: underline; }
 
 body {
-  background-image: linear-gradient(90deg, #e0e0e0, #f5f5f5 50%, #e0e0e0); }
+  background-color: #eeeeee;
+  padding-top: 52px; }
+  @media (max-width: 767px) {
+    body {
+      padding-top: 84px; } }
 
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
+  width: calc(100% - 2rem);
   max-width: 960px; }
   @media (max-width: 1199px) {
     .container {
@@ -371,9 +379,7 @@ body {
       max-width: calc(100% - 20px); } }
 
 footer {
-  background-color: #222222;
-  color: #fff;
+  background-color: #21303b;
+  color: #ffffff;
   padding: 4em 0em;
   text-align: center; }
-
-/*# sourceMappingURL=maps/client.css.map */
