--- a/src/client/sass/client.scss
+++ b/src/client/sass/client.scss
@@ -1,4 +1,3 @@
-@import 'sass-material-colors';
 @import './reset';
 @import './breakpoints';
 @import './colors';
@@ -8,13 +7,18 @@
 @import './navigation';
 
 body {
-    background-image: linear-gradient(90deg, material-color('grey', '300'), material-color('grey', '100') 50%, material-color('grey', '300'));
+    background-color: $standard-dark;
+    padding-top: 52px;
+
+    @media($xs-h) {
+        padding-top: 84px;
+    }
 }
 
 .container {
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
+    width: calc(100% - 2rem);
     max-width: 960px;
 
     @media($md-h) {
@@ -31,8 +35,8 @@ body {
 }
 
 footer {
-    background-color: $grey-darkest;
-    color: $white;
+    background-color: $secondary;
+    color: $secondary-text;
     padding: 4em 0em;
     text-align: center;
 }
