--- a/src/client/sass/colors.scss
+++ b/src/client/sass/colors.scss
@@ -14,6 +14,39 @@ $grey-dark: #666666;
 $grey-darker: #343434;
 $grey-darkest: #222222;
 
+/* Generic */
 $black: #000;
-
 $white: #fff;
+
+/* Primary */
+$primary: #e70d3b;
+$primary-light: lighten($primary, 20);
+
+$primary-text: #ffffff;
+
+/* Secondary */
+$secondary: #21303b; 
+$secondary-light: lighten($secondary, 4);
+$secondary-lighter: lighten($secondary, 6);
+$secondary-lightest: lighten($secondary, 12);
+$secondary-dark: darken($secondary, 10);
+$secondary-darker: darken($secondary, 20);
+
+$secondary-text: #ffffff;
+
+/* Warning */
+$warning: #FFB300;
+
+$warning-text: darken($warning, 30);
+
+/* Success */
+$success: $primary;
+
+$success-text: $primary-text;
+
+/* Standard */
+$standard: #ffffff;
+$standard-dark: #eeeeee;
+$standard-darker: #999999;
+
+$standard-text: #333333;
