--- a/src/client/sass/sections.scss
+++ b/src/client/sass/sections.scss
@@ -16,7 +16,7 @@ section {
 
     img {
         display: block;
-        border: 2px solid material-color('grey', '800');
+        border: 2px solid $secondary;
         margin: 2em auto;
         max-width: 300px;
         cursor: pointer;
@@ -24,7 +24,7 @@ section {
         user-select: none;
 
         &:hover {
-            border-color: material-color('pink', '600');
+            border-color: $primary;
         }
     }
 
@@ -49,40 +49,22 @@ section {
 
     &.banner {
         padding: 0em;
-        height: 600px;
+        height: 300px;
+        max-height: 50vh;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        color: $white;
-        background-position: 50% 0%;
-        background-size: auto 600px;
-        background-attachment: fixed;
-
-        &.light {
-            color: material-color('grey', '800');
-        }
-
-        @media($md-v) {
-            height: 500px;
-            background-size: auto 500px;
-        }
-
-        @media($sm-v) {
-            height: 400px;
-            background-size: auto 400px;
-        }
-
-        @media($xs-v) {
-            height: 300px;
-            background-size: auto 300px;
-        }
+        color: $secondary-text;
+        background-color: $secondary;
 
         .container {
+            border-left: 0.25rem solid $primary;
+            padding-left: 1rem;
             position: relative;
-        
-            h1, h2, p {
-                max-width: 50%;
+
+            h1 {
+                margin-top: 0px;
             }
         }
     }
