--- a/src/client/sass/widgets.scss
+++ b/src/client/sass/widgets.scss
@@ -1,10 +1,9 @@
 .btn {
-    background-color: material-color('pink', '600');
-    color: #fff;
+    background-color: $primary;
+    color: $primary-text;
     height: 50px;
     width: 230px;
     line-height: 50px;
-    border-radius: 25px;
     display: inline-block;
     text-transform: uppercase;
     font-weight: 700;
@@ -21,22 +20,19 @@
 
     &:hover, &:focus {
         outline: 0px;
-        color: #fff;
-        background-color: material-color('pink', '300');
-        border-color: material-color('pink', '600');
     }
 }
 
 pre {
     cursor: text;
     margin: 1em;
-    box-shadow: inset 2px 2px 10px 0px material-color('grey', '900'), 1px 1px 0px #fff;
     padding: 1em;
     font-family: monospace;
-    background-color: material-color('grey', '800');
-    color: material-color('grey', '100');
+    background-color: $secondary;
+    color: $secondary-text;
     border-radius: 5px;
     font-size: 11px;
+    overflow-x: auto;
 }
 
 .modal-backdrop {
