Commit from HashBrown CMS

--- a/_includes/sections/banner.html
+++ b/_includes/sections/banner.html
@@ -1,4 +1,4 @@
-<section class="banner {{ include.section.theme }}">
+<section class="banner">
     <div class="container">
         {% if include.section.text %}
             {{ include.section.text | markdownify }}
