Added demo button

--- a/_sass/sections/banner.scss
+++ b/_sass/sections/banner.scss
@@ -31,6 +31,10 @@
         border-left: 2px solid $color-primary;
     }
 
+    .btn {
+        margin-top: 1.5rem;
+    }
+
     &__video-background {
         position: absolute;
         top: 50%;
