Better heading fonts

--- a/_layouts/sectionPage.html
+++ b/_layouts/sectionPage.html
@@ -21,7 +21,7 @@ layout: compress
                     {% endif %}
 
                     <h1>{{ page.title }}</h1>
-                    <p>{{ page.description }}</p>
+                    <h3>{{ page.description }}</h3>
                     
                     {% if page.url == "/" %}
                         <a href="//demo.hashbrown.rocks" target="_blank" class="btn">Demo</a>
