--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -1,6 +1,7 @@
 /**
  * Global typography rules
  */
+
 @font-face {
     font-family: 'Roboto';
     font-weight: normal;
@@ -14,6 +15,18 @@
 }
 
 @font-face {
+    font-family: 'Roboto';
+    font-weight: 100;
+    src: url('/assets/fonts/Roboto/Roboto-Thin.ttf');
+}
+
+@font-face {
+    font-family: 'Roboto';
+    font-weight: 300;
+    src: url('/assets/fonts/Roboto/Roboto-Light.ttf');
+}
+
+@font-face {
     font-family: 'RobotoMono';
     font-weight: normal;
     src: url('/assets/fonts/Roboto_Mono/RobotoMono-Regular.ttf');
@@ -23,6 +36,10 @@ html {
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
+
+    @media($xs-max) {
+        font-size: 14px;
+    }
 }
 
 a {
@@ -31,4 +48,22 @@ a {
 
 pre {
     font-family: 'RobotoMono', monospace;
+}
+
+h1 {
+    font-weight: 100;
+    font-size: 3em;
+}
+
+h2 {
+    font-size: 2em;
+}
+
+h3 {
+    font-size: 1.25em;
+}
+
+h2, h3, h4, h5, h6 {
+    font-weight: 300;
+    margin-bottom: 1em;
 }
