--- a/_includes/main/head.html
+++ b/_includes/main/head.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/lib/font-awesome/css/font-awesome.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/client.css" media="screen">
     <link rel="canonical" href="http://hashbrown.rocks{{ page.url }}">
+    <link href="/favicon.png?v=2" rel="icon" type="image/png"/>
 
     <title>{{ page.title }}</title>
     <meta name="description" content="{{ page.description }}">
