Added slide styling

--- a/css/client.scss
+++ b/css/client.scss
@@ -13,6 +13,7 @@
 @import 'widgets';
 @import 'main-menu';
 @import 'footer';
+@import 'iframes';
 
 @import 'sections/banner';
 @import 'sections/buttons';
