--- a/_includes/main/head.html
+++ b/_includes/main/head.html
@@ -3,6 +3,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://hashbrown.rocks{{ page.url }}" />
+    <meta property="og:image" content="http://hashbrown.rocks/assets/img/opengraph-cover.jpg" />
+
     <link rel="stylesheet" type="text/css" href="/assets/lib/font-awesome/css/font-awesome.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/client.css" media="screen">
     <link rel="canonical" href="http://hashbrown.rocks{{ page.url }}">
