--- a/_includes/main/head.html
+++ b/_includes/main/head.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:description" content="{{ page.description }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://hashbrown.rocks{{ page.url }}" />
     <meta property="og:image" content="http://hashbrown.rocks/assets/img/opengraph-cover.jpg" />
