Added query to video background

--- a/_layouts/sectionPage.html
+++ b/_layouts/sectionPage.html
@@ -12,8 +12,8 @@ layout: compress
         <div class="page {% if page.url == "/" %}page--home{% endif %}"> 
             <section class="section-banner">
                 <div class="container">
-                    <video class="section-banner__video-background" loop muted autoplay poster="/assets/img/background-secondary.jpg">
-                        <source src="/assets/webm/background-secondary.webm" type="video/webm">
+                    <video class="section-banner__video-background" loop muted autoplay poster="/assets/img/background-secondary.jpg?v=1">
+                        <source src="/assets/webm/background-secondary.webm?v=1" type="video/webm">
                     </video>
 
                     {% if page.url == "/" %}
