Added news feed

--- a/_includes/partials/newsFeed.html
+++ b/_includes/partials/newsFeed.html
@@ -1,3 +1,5 @@
-<section class="news-feed" data-use-reddit="{{ include.section.useReddit }}">
+<section class="section--news-feed" data-use-reddit="{{ include.section.useReddit }}">
+    <h2 class="section--news-feed__heading">News</h2>
 
+    <div class="container"></div>
 </section>
