--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -9,4 +9,5 @@ $color-secondary-dark: #d8153e;
 $color-secondary-alt: #ffffff;
 
 $color-standard: #eeeeee;
+$color-standard-dark: #cccccc;
 $color-standard-alt: #333333;
