--- a/_sass/pages/docs.scss
+++ b/_sass/pages/docs.scss
@@ -13,6 +13,14 @@
         flex-basis: 20rem;
     }
 
+    &__disclaimer {
+        background-color: $color-primary;
+        color: $color-primary-alt;
+        padding: 1rem;
+        border-radius: 0.2rem;
+        margin: 2rem 0;
+    }
+
     &__entry {
         &:not(:first-of-type) {
             margin-top: 3rem;
